# RosSnatch

./: CMakeLists.txt  package.xml
include/snatch/: SnatchNode.h  SnatchParser.h  SnatchParserEvent.h  SnatchSerial.h  SnatchSerialException.h
msg/: Channels.msg  Command.msg
src/: SnatchNode.cpp  SnatchParser.cpp  SnatchSerial.cpp
srv/: GetState.srv  GetValue.srv  SetValue.srv
