<?xml version="1.0"?>
<package>
  <name>snatch</name>
  <version>0.0.0</version>
  <description>Comms with CleanFlight with snatch patch</description>

  <maintainer email="timothy.e.potter@gmail.com">Tim P.</maintainer>

  <license>GPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/snatch</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
  </export>
</package>
